Resolved several bugs following codebase changes in last commit

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -28,7 +28,7 @@
     "import eeDatabase_collectionInfo as eedb_colinfo\n",
     "\n",
     "# ee.Authenticate()\n",
-    "ee.Initialize(project = \"dri-apps\")\n",
+    "ee.Initialize(project = \"climate-engine-pro\")\n",
     "\n",
     "Map = geemap.Map()"
    ]
@@ -44,24 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "zQPixTuOF658"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['IDAHO_EPSCOR/GRIDMET']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2023, 1, 1)\n",
-    "end_date = datetime.datetime(2023, 2, 1)\n",
+    "start_date = datetime.datetime(1980, 1, 1)\n",
+    "end_date = datetime.datetime(2024, 1, 1)\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "# Define input dataset\n",
@@ -70,7 +62,7 @@
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'precip'\n",
+    "var_name = 'eto'\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "# Define input path for Feature Collection\n",
@@ -88,12 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define additional parameters required for functions and output properties below"
+    "## Define additional parameters required for functions and output properties below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +112,7 @@
     "in_ic_res = ee.Number(ee.ImageCollection(in_ic_paths[0]).first().projection().nominalScale()).round().getInfo()\n",
     "var_type = eedb_colinfo.in_ic_dict.get(in_ic_name).get('var_type')\n",
     "var_units = eedb_colinfo.var_dict.get(var_name).get('units')\n",
-    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
+    "out_path = f\"projects/climate-engine-pro/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
    ]
   },
   {
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,54 +132,96 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-eto\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-eto\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-15T17:48:48.889795Z\"\n",
+      "  \"updateTime\": \"2023-06-16T05:17:55.704909Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-eto\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-eto\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-15T17:48:48.889795Z\"\n",
+      "  \"updateTime\": \"2023-06-16T05:17:55.704909Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2023-01-01 00:00:00 - 2023-02-01 00:00:00\n",
-      "Running  2023-01-04 23:00:00\n",
-      "['IDAHO_EPSCOR/GRIDMET']\n",
-      "precip\n",
-      "1672898400000\n",
-      "['20230105']\n",
-      "['20230105']\n",
-      "Running  2023-01-09 23:00:00\n",
-      "['IDAHO_EPSCOR/GRIDMET']\n",
-      "precip\n",
-      "1673330400000\n",
-      "['20230110']\n",
-      "['20230110']\n",
-      "Running  2023-01-14 23:00:00\n",
-      "['IDAHO_EPSCOR/GRIDMET']\n",
-      "precip\n",
-      "1673762400000\n",
-      "['20230115']\n",
-      "['20230115']\n",
-      "Running  2023-01-19 23:00:00\n",
-      "['IDAHO_EPSCOR/GRIDMET']\n",
-      "precip\n",
-      "1674194400000\n",
-      "['20230120']\n",
-      "['20230120']\n",
-      "Running  2023-01-24 23:00:00\n",
-      "['IDAHO_EPSCOR/GRIDMET']\n",
-      "precip\n",
-      "1674626400000\n",
-      "['20230125']\n",
-      "['20230125']\n",
-      "Running  2023-01-29 23:00:00\n",
-      "['IDAHO_EPSCOR/GRIDMET']\n",
-      "precip\n",
-      "1675058400000\n",
-      "['20230130']\n",
-      "['20230130']\n"
+      "Appending to Image Collection for dates 1980-01-01 00:00:00 - 2024-01-01 00:00:00\n",
+      "Running  1980-01-04 23:00:00\n",
+      "Running  1980-01-09 23:00:00\n",
+      "Running  1980-01-14 23:00:00\n",
+      "Running  1980-01-19 23:00:00\n",
+      "Running  1980-01-24 23:00:00\n",
+      "Running  1980-01-29 23:00:00\n",
+      "Running  1980-02-03 23:00:00\n",
+      "Running  1980-02-08 23:00:00\n",
+      "Running  1980-02-13 23:00:00\n",
+      "Running  1980-02-18 23:00:00\n",
+      "Running  1980-02-23 23:00:00\n",
+      "Running  1980-02-28 23:00:00\n",
+      "Running  1980-03-04 23:00:00\n",
+      "Running  1980-03-09 23:00:00\n",
+      "Running  1980-03-14 23:00:00\n",
+      "Running  1980-03-19 23:00:00\n",
+      "Running  1980-03-24 23:00:00\n",
+      "Running  1980-03-29 23:00:00\n",
+      "Running  1980-04-03 23:00:00\n",
+      "Running  1980-04-08 23:00:00\n",
+      "Running  1980-04-13 23:00:00\n",
+      "Running  1980-04-18 23:00:00\n",
+      "Running  1980-04-23 23:00:00\n",
+      "Running  1980-04-29 00:00:00\n",
+      "Running  1980-05-04 00:00:00\n",
+      "Running  1980-05-09 00:00:00\n",
+      "Running  1980-05-14 00:00:00\n",
+      "Running  1980-05-19 00:00:00\n",
+      "Running  1980-05-24 00:00:00\n",
+      "Running  1980-05-29 00:00:00\n",
+      "Running  1980-06-03 00:00:00\n",
+      "Running  1980-06-08 00:00:00\n",
+      "Running  1980-06-13 00:00:00\n",
+      "Running  1980-06-18 00:00:00\n",
+      "Running  1980-06-23 00:00:00\n",
+      "Running  1980-06-28 00:00:00\n",
+      "Running  1980-07-03 00:00:00\n",
+      "Running  1980-07-08 00:00:00\n",
+      "Running  1980-07-13 00:00:00\n",
+      "Running  1980-07-18 00:00:00\n",
+      "Running  1980-07-23 00:00:00\n",
+      "Running  1980-07-28 00:00:00\n",
+      "Running  1980-08-02 00:00:00\n",
+      "Running  1980-08-07 00:00:00\n",
+      "Running  1980-08-12 00:00:00\n",
+      "Running  1980-08-17 00:00:00\n",
+      "Running  1980-08-22 00:00:00\n",
+      "Running  1980-08-27 00:00:00\n",
+      "Running  1980-09-01 00:00:00\n",
+      "Running  1980-09-06 00:00:00\n",
+      "Running  1980-09-11 00:00:00\n",
+      "Running  1980-09-16 00:00:00\n",
+      "Running  1980-09-21 00:00:00\n",
+      "Running  1980-09-26 00:00:00\n",
+      "Running  1980-10-01 00:00:00\n",
+      "Running  1980-10-06 00:00:00\n",
+      "Running  1980-10-11 00:00:00\n",
+      "Running  1980-10-16 00:00:00\n",
+      "Running  1980-10-21 00:00:00\n",
+      "Running  1980-10-26 00:00:00\n",
+      "Running  1980-10-30 23:00:00\n",
+      "Running  1980-11-04 23:00:00\n",
+      "Running  1980-11-09 23:00:00\n",
+      "Running  1980-11-14 23:00:00\n",
+      "Running  1980-11-19 23:00:00\n",
+      "Running  1980-11-24 23:00:00\n",
+      "Running  1980-11-29 23:00:00\n",
+      "Running  1980-12-04 23:00:00\n",
+      "Running  1980-12-09 23:00:00\n",
+      "Running  1980-12-14 23:00:00\n",
+      "Running  1980-12-19 23:00:00\n",
+      "Running  1980-12-24 23:00:00\n",
+      "Running  1980-12-29 23:00:00\n",
+      "Running  1981-01-04 23:00:00\n",
+      "Running  1981-01-09 23:00:00\n",
+      "Running  1981-01-14 23:00:00\n",
+      "Running  1981-01-19 23:00:00\n",
+      "Running  1981-01-24 23:00:00\n"
      ]
     }
    ],
@@ -199,7 +233,7 @@
     "    \n",
     "    # Create dictionary of properties\n",
     "    properties = {'system:index': '0_id', 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path, \n",
-    "                  'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths, 'in_ic_path': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, \n",
+    "                  'in_fc_id': in_fc_id, 'in_ic_path': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, \n",
     "                  'var_name': var_name, 'var_units': var_units}\n",
     "    if mask == True:\n",
     "            properties['mask_path'] = mask_path\n",
@@ -227,17 +261,21 @@
     "        \n",
     "        # Create dictionary of properties for image    \n",
     "        properties = {'system:index': date_ymd, 'system:time_start': date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
-    "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths, 'in_ic_path': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
-    "                      'var_name': var_name, 'var_units': var_units, 'mask': mask}\n",
+    "                      'in_fc_id': in_fc_id, 'in_ic_path': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
+    "                      'var_name': var_name, 'var_units': var_units}\n",
+    "        if mask == True:\n",
+    "            properties['mask_path'] = mask_path\n",
+    "        elif mask == False:\n",
+    "            properties['mask_path'] = 'None'\n",
     "        \n",
-    "        eedb_cor.run_image_export(date = date, out_path = out_path, properties = properties)"
+    "        eedb_cor.run_image_export(in_ic_paths = in_ic_paths, date = date, out_path = out_path, properties = properties)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check completeness of image collections and re-run any images that are missing"
+    "## Check completeness of image collections and re-run any images that are missing"
    ]
   },
   {
@@ -297,10 +335,9 @@
     }
    ],
    "source": [
-    "# tasks = !geeadd tasks\n",
+    "tasks = !geeadd tasks\n",
     "task_count = int(tasks[1].replace(\"Tasks Pending: \", \"\"))\n",
-    "task_count\n",
-    "# dict(tasks).get('Tasks Running')"
+    "task_count"
    ]
   }
  ],
