--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -58,11 +58,11 @@
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'RAP_16dProduction'\n",
+    "in_ic_name = 'RAP_Production'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'pfgAGB'\n",
+    "var_name = 'shrAGB'\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "# Define input path for Feature Collection\n",
@@ -72,7 +72,6 @@
     "# ------------------------------ Define mask, if applicable --------------------------------------------\n",
     "# For BLM, we will apply mask to field offices, district offices, and state offices, but not to allotments\n",
     "# Apply mask for ownership, landcover, or other variables. Must be binary mask.\n",
-    "mask = False\n",
     "mask_path = 'projects/dri-apps/assets/blm-admin/blm-natl-admu-sma-binary'"
    ]
   },
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,29 +93,39 @@
     "    land_unit_long = 'BLM_Natl_Grazing_Allotment_Polygons'\n",
     "    land_unit_short = 'BLM_Allotments'\n",
     "    tile_scale = 1\n",
-    "    in_fc_id = 'ALLOT_ID'\n",
+    "    in_fc_id = 'ALLOT_ID',\n",
+    "    fc_mask = False\n",
     "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-fieldoffice-polygons'):\n",
     "    land_unit_long = 'BLM_Natl_FieldOffice_Polygons'\n",
     "    land_unit_short = 'BLM_FieldOffices'\n",
-    "    tile_scale = 16\n",
+    "    tile_scale = 4\n",
     "    in_fc_id = 'FO_ID'\n",
+    "    fc_mask = False\n",
     "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-districtoffice-polygons'):\n",
     "    land_unit_long = 'BLM_Natl_DistrictOffice_Polygons'\n",
     "    land_unit_short = 'BLM_DistrictOffices'\n",
-    "    tile_scale = 16\n",
+    "    tile_scale = 4\n",
     "    in_fc_id = 'DO_ID'\n",
+    "    fc_mask = False\n",
     "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-stateoffice-polygons'):\n",
     "    land_unit_long = 'BLM_Natl_StateOffice_Polygons'\n",
-    "    land_unit_short = 'BLM_StateOffices',\n",
-    "    tile_scale = 16\n",
+    "    land_unit_short = 'BLM_StateOffices'\n",
+    "    tile_scale = 4\n",
     "    in_fc_id = 'SO_ID'\n",
+    "    fc_mask = False\n",
     "\n",
     "# Pull out additional variables needed to run exports\n",
     "in_ic_paths = eedb_colinfo.in_ic_dict.get(in_ic_name).get('in_ic_paths')\n",
     "in_ic_res = ee.Number(ee.ImageCollection(in_ic_paths[0]).first().projection().nominalScale()).round().getInfo()\n",
     "var_type = eedb_colinfo.in_ic_dict.get(in_ic_name).get('var_type')\n",
     "var_units = eedb_colinfo.var_dict.get(var_name).get('units')\n",
-    "out_path = f\"projects/climate-engine-pro/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
+    "out_path = f\"projects/climate-engine-pro/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\"\n",
+    "\n",
+    "# Apply mask for remote sensing datasets on larger boundaries\n",
+    "if fc_mask == True & eedb_colinfo.in_ic_dict.get(in_ic_name).get('ic_mask') == True:\n",
+    "    mask = True\n",
+    "else:\n",
+    "    mask = False"
    ]
   },
   {
@@ -128,18 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Asset does not exist or is not accessible: projects/climate-engine-pro/assets/blm-database/blmallotments-rap16dproduction-pfgagb\n",
-      "Initializing Image Collection by creating EE asset and exporting ID image\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If there is no Image Collection asset at the out_path create one and export ID image\n",
     "if os.system(f\"earthengine asset info {out_path}\") == 256:\n",
@@ -194,51 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These dates are missing and will be rerun  {504921600000, 536457600000, 599616000000, 631152000000, 567993600000, 662688000000, 694224000000, 725846400000, 757382400000, 788918400000, 820454400000, 1104537600000, 1009843200000, 978307200000, 883612800000, 1199145600000, 1293840000000, 1388534400000, 915148800000, 1483228800000, 1609459200000, 1514764800000, 1420070400000, 1325376000000, 852076800000, 1072915200000, 1167609600000, 1262304000000, 1356998400000, 1577836800000, 1041379200000, 946684800000, 1136073600000, 1230768000000, 1451606400000, 1546300800000, 1640995200000}\n",
-      "Running  1985-12-31 17:00:00\n",
-      "Running  1986-12-31 17:00:00\n",
-      "Running  1988-12-31 17:00:00\n",
-      "Running  1989-12-31 17:00:00\n",
-      "Running  1987-12-31 17:00:00\n",
-      "Running  1990-12-31 17:00:00\n",
-      "Running  1991-12-31 17:00:00\n",
-      "Running  1992-12-31 17:00:00\n",
-      "Running  1993-12-31 17:00:00\n",
-      "Running  1994-12-31 17:00:00\n",
-      "Running  1995-12-31 17:00:00\n",
-      "Running  2004-12-31 17:00:00\n",
-      "Running  2001-12-31 17:00:00\n",
-      "Running  2000-12-31 17:00:00\n",
-      "Running  1997-12-31 17:00:00\n",
-      "Running  2007-12-31 17:00:00\n",
-      "Running  2010-12-31 17:00:00\n",
-      "Running  2013-12-31 17:00:00\n",
-      "Running  1998-12-31 17:00:00\n",
-      "Running  2016-12-31 17:00:00\n",
-      "Running  2020-12-31 17:00:00\n",
-      "Running  2017-12-31 17:00:00\n",
-      "Running  2014-12-31 17:00:00\n",
-      "Running  2011-12-31 17:00:00\n",
-      "Running  1996-12-31 17:00:00\n",
-      "Running  2003-12-31 17:00:00\n",
-      "Running  2006-12-31 17:00:00\n",
-      "Running  2009-12-31 17:00:00\n",
-      "Running  2012-12-31 17:00:00\n",
-      "Running  2019-12-31 17:00:00\n",
-      "Running  2002-12-31 17:00:00\n",
-      "Running  1999-12-31 17:00:00\n",
-      "Running  2005-12-31 17:00:00\n",
-      "Running  2008-12-31 17:00:00\n",
-      "Running  2015-12-31 17:00:00\n",
-      "Running  2018-12-31 17:00:00\n",
-      "Running  2021-12-31 17:00:00\n"
+      "These dates are missing and will be rerun  {1697954400000}\n",
+      "Running  2023-10-21 23:00:00\n"
      ]
     }
    ],
@@ -292,6 +256,23 @@
     "task_count = int(tasks[1].replace(\"Tasks Pending: \", \"\"))\n",
     "task_count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: geeadd\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!geeadd cancel --tasks 'all'"
+   ]
   }
  ],
  "metadata": {
@@ -315,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
