--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -52,21 +52,21 @@
    "source": [
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2003, 1, 1)\n",
+    "start_date = datetime.datetime(1980, 1, 1)\n",
     "end_date = datetime.datetime(2025, 1, 1)\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'GridMET'\n",
+    "in_ic_name = 'RAP_16dProduction'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'tmmx'\n",
+    "var_name = 'shrAGB'\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "# Define input path for Feature Collection\n",
-    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons'\n",
+    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-admu-stateoffice-polygons'\n",
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "\n",
     "# ------------------------------ Define mask, if applicable --------------------------------------------\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,19 +100,19 @@
     "    land_unit_short = 'BLM_FieldOffices'\n",
     "    tile_scale = 1\n",
     "    in_fc_id = 'FO_ID'\n",
-    "    fc_mask = False\n",
+    "    fc_mask = True\n",
     "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-districtoffice-polygons'):\n",
     "    land_unit_long = 'BLM_Natl_DistrictOffice_Polygons'\n",
     "    land_unit_short = 'BLM_DistrictOffices'\n",
     "    tile_scale = 1\n",
     "    in_fc_id = 'DO_ID'\n",
-    "    fc_mask = False\n",
+    "    fc_mask = True\n",
     "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-stateoffice-polygons'):\n",
     "    land_unit_long = 'BLM_Natl_StateOffice_Polygons'\n",
     "    land_unit_short = 'BLM_StateOffices'\n",
     "    tile_scale = 1\n",
     "    in_fc_id = 'SO_ID'\n",
-    "    fc_mask = False\n",
+    "    fc_mask = True\n",
     "\n",
     "# Pull out additional variables needed to run exports\n",
     "in_ic_paths = eedb_colinfo.in_ic_dict.get(in_ic_name).get('in_ic_paths')\n",
@@ -137,9 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmfieldoffices-rap16dproduction-shragb\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmfieldoffices-rap16dproduction-shragb\",\n",
+      "  \"type\": \"IMAGE_COLLECTION\",\n",
+      "  \"updateTime\": \"2023-12-28T06:57:49.837636Z\"\n",
+      "}\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -156,85 +170,11 @@
       "    self.command_dict[vars(args)[self.dest]].run(args, config)\n",
       "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/commands.py\", line 361, in run\n",
       "    self.command_dict[vars(args)[self.dest]].run(args, config)\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/commands.py\", line 665, in run\n",
-      "    info = ee.data.getInfo(args.asset_id)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/deprecation.py\", line 30, in Wrapper\n",
-      "    return func(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/data.py\", line 465, in getInfo\n",
-      "    .execute(num_retries=MAX_RETRIES)\n",
-      "     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/googleapiclient/_helpers.py\", line 130, in positional_wrapper\n",
-      "    return wrapped(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/googleapiclient/http.py\", line 923, in execute\n",
-      "    resp, content = _retry_request(\n",
-      "                    ^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/googleapiclient/http.py\", line 191, in _retry_request\n",
-      "    resp, content = http.request(uri, method, *args, **kwargs)\n",
-      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/google_auth_httplib2.py\", line 218, in request\n",
-      "    response, content = self.http.request(\n",
-      "                        ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/_cloud_api_utils.py\", line 62, in request\n",
-      "    response = session.request(\n",
-      "               ^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py\", line 589, in request\n",
-      "    resp = self.send(prep, **send_kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py\", line 703, in send\n",
-      "    r = adapter.send(request, **kwargs)\n",
-      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/adapters.py\", line 486, in send\n",
-      "    resp = conn.urlopen(\n",
-      "           ^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py\", line 790, in urlopen\n",
-      "    response = self._make_request(\n",
-      "               ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py\", line 536, in _make_request\n",
-      "    response = conn.getresponse()\n",
-      "               ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/connection.py\", line 461, in getresponse\n",
-      "    httplib_response = super().getresponse()\n",
-      "                       ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/http/client.py\", line 1378, in getresponse\n",
-      "    response.begin()\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/http/client.py\", line 318, in begin\n",
-      "    version, status, reason = self._read_status()\n",
-      "                              ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/http/client.py\", line 279, in _read_status\n",
-      "    line = str(self.fp.readline(_MAXLINE + 1), \"iso-8859-1\")\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/socket.py\", line 706, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ssl.py\", line 1311, in recv_into\n",
-      "    return self.read(nbytes, buffer)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ssl.py\", line 1167, in read\n",
-      "    return self._sslobj.read(len, buffer)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "KeyboardInterrupt\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/homebrew/bin/earthengine\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "             ^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/eecli.py\", line 87, in main\n",
-      "    _run_command()\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/eecli.py\", line 61, in _run_command\n",
-      "    dispatcher.run(args, config)\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/commands.py\", line 361, in run\n",
-      "    self.command_dict[vars(args)[self.dest]].run(args, config)\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/commands.py\", line 361, in run\n",
-      "    self.command_dict[vars(args)[self.dest]].run(args, config)\n",
       "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/commands.py\", line 664, in run\n",
       "    config.ee_init()\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/utils.py\", line 148, in ee_init\n",
-      "    ee.Initialize(\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/__init__.py\", line 132, in Initialize\n",
-      "    data.initialize(\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/data.py\", line 212, in initialize\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/cli/utils.py\", line 153, in ee_init\n",
+      "    ee.data.setUserAgent('eecli')\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/data.py\", line 407, in setUserAgent\n",
       "    _install_cloud_api_resource()\n",
       "  File \"/opt/homebrew/lib/python3.11/site-packages/ee/data.py\", line 273, in _install_cloud_api_resource\n",
       "    _cloud_api_resource = _cloud_api_utils.build_cloud_resource(\n",
@@ -272,29 +212,20 @@
       "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py\", line 589, in request\n",
       "    resp = self.send(prep, **send_kwargs)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py\", line 703, in send\n",
-      "    r = adapter.send(request, **kwargs)\n",
-      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/adapters.py\", line 486, in send\n",
-      "    resp = conn.urlopen(\n",
-      "           ^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py\", line 790, in urlopen\n",
-      "    response = self._make_request(\n",
-      "               ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py\", line 536, in _make_request\n",
-      "    response = conn.getresponse()\n",
-      "               ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/connection.py\", line 461, in getresponse\n",
-      "    httplib_response = super().getresponse()\n",
-      "                       ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/http/client.py\", line 1378, in getresponse\n",
-      "    response.begin()\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/http/client.py\", line 318, in begin\n",
-      "    version, status, reason = self._read_status()\n",
-      "                              ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/http/client.py\", line 279, in _read_status\n",
-      "    line = str(self.fp.readline(_MAXLINE + 1), \"iso-8859-1\")\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py\", line 747, in send\n",
+      "    r.content\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/models.py\", line 899, in content\n",
+      "    self._content = b\"\".join(self.iter_content(CONTENT_CHUNK_SIZE)) or b\"\"\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/requests/models.py\", line 816, in generate\n",
+      "    yield from self.raw.stream(chunk_size, decode_content=True)\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/response.py\", line 933, in stream\n",
+      "    yield from self.read_chunked(amt, decode_content=decode_content)\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/response.py\", line 1073, in read_chunked\n",
+      "    self._update_chunk_length()\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/urllib3/response.py\", line 1001, in _update_chunk_length\n",
+      "    line = self._fp.fp.readline()  # type: ignore[union-attr]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/socket.py\", line 706, in readinto\n",
       "    return self._sock.recv_into(b)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
@@ -362,15 +293,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These dates are missing and will be rerun  [1704434400000]\n",
-      "Running  2024-01-04 23:00:00\n"
+      "These dates are missing and will be rerun  [1672531200000, 1673913600000, 1675296000000, 1676678400000, 1678060800000, 1679443200000, 1680825600000, 1682208000000, 1683590400000, 1684972800000, 1686355200000, 1687737600000, 1689120000000, 1690502400000, 1691884800000, 1693267200000, 1694649600000, 1696032000000, 1697414400000, 1698796800000]\n",
+      "Running  2022-12-31 17:00:00\n",
+      "Running  2023-01-16 17:00:00\n",
+      "Running  2023-02-01 17:00:00\n",
+      "Running  2023-02-17 17:00:00\n",
+      "Running  2023-03-05 17:00:00\n",
+      "Running  2023-03-21 18:00:00\n",
+      "Running  2023-04-06 18:00:00\n",
+      "Running  2023-04-22 18:00:00\n",
+      "Running  2023-05-08 18:00:00\n",
+      "Running  2023-05-24 18:00:00\n",
+      "Running  2023-06-09 18:00:00\n",
+      "Running  2023-06-25 18:00:00\n",
+      "Running  2023-07-11 18:00:00\n",
+      "Running  2023-07-27 18:00:00\n",
+      "Running  2023-08-12 18:00:00\n",
+      "Running  2023-08-28 18:00:00\n",
+      "Running  2023-09-13 18:00:00\n",
+      "Running  2023-09-29 18:00:00\n",
+      "Running  2023-10-15 18:00:00\n",
+      "Running  2023-10-31 18:00:00\n"
      ]
     }
    ],
